<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".register.Login">

<!-- textView login-->
<TextView
    android:id="@+id/tv_title_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:fontFamily="@font/muli_black"
    android:text="@string/login"
    android:textAllCaps="true"
    android:textSize="40sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/linearLayout_login"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<LinearLayout
    android:id="@+id/linearLayout_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <!-- editText email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mobile_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobile_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:hint="@string/mobile"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- eitText password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- remember & forgot-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remember_me" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <!-- button login-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <!-- button already-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_already_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:padding="12dp"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>