<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.SignUp1">

    <ProgressBar
        android:id="@+id/progressBar_sign_up1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- textView sign up-->
            <TextView
                android:id="@+id/tv_sing_up1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- textView 1/2-->
            <TextView
                android:id="@+id/tv_sing_up1_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/_1_2"
                android:textAllCaps="true"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sing_up1_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- linear name, batch, id, hall, mobile-->
            <LinearLayout
                android:id="@+id/linearLayout_mSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sing_up1_title">

                <!-- eitText batch-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_sign_Up1_batch"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/batch"
                    app:errorEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/ac_sign_up1_batch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:inputType="none"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- eitText student id-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_sign_Up1_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:hint="@string/student_id"
                    android:visibility="visible"
                    app:errorEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/ac_sign_up1_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:inputType="number"
                        android:maxLength="8"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- eitText token -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_sign_up1_token"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up1_token"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans"
                        android:hint="@string/user_token"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- eitText student hall-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_sign_Up1_hall"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/hall"
                    app:errorEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/ac_sign_up1_hall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:inputType="none"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- eitText mobile -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_sign_up1_mobile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up1_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans"
                        android:hint="@string/mobile_no"
                        android:inputType="number"
                        android:maxLength="11" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- button next -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_up1_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:padding="10dp"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textSize="17sp" />

                <!-- button already -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_up1_already"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:padding="12dp"
                    android:text="@string/already_have_an_account"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>